@@ -225,6 +225,14 @@ Using the \-r flag cannot be used to recursively process all files
 of a given extension in a directory. This is a feature, not a bug. 
 If you need to do this, use the \fBfind\fR(1) command.
 
+The program will fail if you attempt to compare 2^64 or more input
+files against a set of known files. 
+
+
+
+
+
+
 .SH REPORTING BUGS
 We take all bug reports \fIvery\fR seriously. Any bug that jeopardizes the
 forensic integrity of this program could have serious consequenses on 
